VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP, AND
MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.

-v6.00.27 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIME DURING UPGRADES FROM V6.00.26 OR LOWER.

-------------------------------------------------------------------



-------------------------------------------------------------------
6.00.29:

-BUG FIX: Fixed heading title resizing (when using the font resizing feature in the sidebar), so they now resize with the other text

-BUG FIX: Miscellaneous fixes

-Added Admin Config settings into these admin interface sections (these config settings are now editable in the admin interface): News Feeds, Plugins, Address Balance Tracker (plugin), Price Target Alert (plugin), Recurring Reminder (plugin)

-Added config file formatting error checks (if a significant error that would crash the app is discovered, you are notified, and the current config file is securely backed up / replaced with a 'factory reset' config)

-Updated the alphavantage.co stock exchange API daily FREE LEVEL to 25 requests per day (LIVE data will be auto-throttled, so you don't go over your FREE daily limit)

-Consolidated error / debug logs into one log file, for clarified debugging output (whe debugging is enabled)

-Added range sliders in place of all drop-down select menus (for numerical values) in the admin interface

-Miscellaneous user experience improvements

-Code optimization / cleanup

-Updated documentation

IMPORTANT *UPGRADE* NOTICE:

v6.00.29 and higher restructures the 'price-target-alert' plugin. USE THE LATEST/UPGRADED PLUG_CONF.PHP,
AND MIGRATE YOUR EXISTING CUSTOM PRICE TARGET ALERTS TO THE NEW FORMAT.

v6.00.29 and higher renames / restructures MANY settings in the config. USE THE LATEST/UPGRADED CONFIG.PHP,
AND MIGRATE YOUR EXISTING CUSTOM NEWS FEEDS TO THE NEW FORMAT.
